@@ -1,3 +1,8 @@
+2003-09-04 Miguel Guzman <aglanor [at] telefonica [dot] net>
+	* configure.ac: pumped up atlas version req to 0.5
+	* ServerService: added support for character creation
+	* DimeOgre: bound key "5" to character creation
+
 2003-08-26 Miguel Guzman <aglanor [at] telefonica [dot] net>
 	* configure.ac: pumped up eris version to eris-1.2 
 	(Eris 0.9.8)
